--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,14 +858,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 10: right-hand side of conformal factor variable \"cf\". Supported\n",
     "#          options include: cf=phi, cf=W=e^(-2*phi) (default), and cf=chi=e^(-4*phi)\n",
-    "# \\partial_t phi = \\left[\\beta^k \\partial_k \\phi \\right] \n",
-    "#                  + \\frac{1}{6} \\left (\\bar{D}_{k} \\beta^{k} - \\alpha K \\right )\n",
+    "# \\partial_t phi = \\left[\\beta^k \\partial_k \\phi \\right] <- TERM 1\n",
+    "#                  + \\frac{1}{6} \\left (\\bar{D}_{k} \\beta^{k} - \\alpha K \\right ) <- TERM 2\n",
+    "\n",
     "cf_rhs = sp.Rational(1,6) * (Dbarbetacontraction + alpha*trK) # Term 2\n",
     "for k in range(DIM):\n",
     "    cf_rhs += betaU[k]*phi_dupD[k] # Term 1\n",
@@ -899,10 +900,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 11: right-hand side of trK (trace of extrinsic curvature):\n",
+    "# \\partial_t K = \\beta^k \\partial_k K <- TERM 1\n",
+    "#           + \\frac{1}{3} \\alpha K^{2} <- TERM 2\n",
+    "#           + \\alpha \\bar{A}_{i j} \\bar{A}^{i j} <- TERM 3\n",
+    "#           - - e^{-4 \\phi} (\\bar{D}_{i} \\bar{D}^{i} \\alpha + 2 \\bar{D}^{i} \\alpha \\bar{D}_{i} \\phi ) <- TERM 4\n",
     "trK_rhs = sp.Rational(1,3)*alpha*trK*trK # Term 2\n",
     "trK_dupD = ixp.declarerank1(\"trK_dupD\")\n",
     "for k in range(DIM):\n",
@@ -928,8 +934,91 @@
     "## Right-hand sides of BSSN equations, part 5: $\\partial_t \\bar{\\Lambda}^{i}$\n",
     "\n",
     "\\begin{align}\n",
-    "\\partial_t \\bar{\\Lambda}^{i} &= \\left[\\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k \\right] + \\bar{\\gamma}^{j k} \\hat{D}_{j} \\hat{D}_{k} \\beta^{i} + \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j} + \\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j} \\nonumber \\\\\n",
-    "  & - 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi \\right ) + 2 \\bar{A}^{j k} \\Delta_{j k}^{i}  -\\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K\n",
+    "\\partial_t \\bar{\\Lambda}^{i} &= \n",
+    "{\\underbrace {\\textstyle \\left[\\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k \\right]}_{\\text{Term 1}}} + \n",
+    "{\\underbrace {\\textstyle \\bar{\\gamma}^{j k} \\hat{D}_{j} \\hat{D}_{k} \\beta^{i}}_{\\text{Term 2}}} + \n",
+    "{\\underbrace {\\textstyle \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j}}_{\\text{Term 3}}} + \n",
+    "{\\underbrace {\\textstyle \\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j}}_{\\text{Term 4}}} \\nonumber \\\\\n",
+    "  & \n",
+    "{\\underbrace {\\textstyle - 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi \\right )}_{\\text{Term 5}}} + \n",
+    "{\\underbrace {\\textstyle 2 \\bar{A}^{j k} \\Delta_{j k}^{i}}_{\\text{Term 6}}} \n",
+    "{\\underbrace {\\textstyle -\\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K}_{\\text{Term 7}}}\n",
+    "\\end{align}\n",
+    "\n",
+    "### Term 3 of  $\\partial_t \\bar{\\Lambda}^{i}$: $\\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j}$\n",
+    "\n",
+    "This term is the simplest to implement, as $\\bar{D}_{j} \\beta^{j}$ and $\\Delta^i$ have already been defined, as Dbarbetacontraction and DGammaU\\[i\\], respectively:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 12: right-hand side of \\partial_t \\bar{\\Lambda}^i:\n",
+    "# \\partial_t \\bar{\\Lambda}^i = \\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k <- TERM 1\n",
+    "#                            + \\bar{\\gamma}^{j k} \\hat{D}_{j} \\hat{D}_{k} \\beta^{i} <- TERM 2\n",
+    "#                            + \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j} <- TERM 3\n",
+    "#                            + \\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j} <- TERM 4\n",
+    "#                            - 2 \\bar{A}^{i j} (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi) <- TERM 5\n",
+    "#                            + 2 \\bar{A}^{j k} \\Delta_{j k}^{i} <- TERM 6\n",
+    "#                            - \\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K <- TERM 7\n",
+    "\n",
+    "# Step 12a: Term 3 of \\partial_t \\bar{\\Lambda}^i\n",
+    "Lambar_rhsU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        Lambar_rhsU[i] += sp.Rational(2,3)*DGammaU[i]*Dbarbetacontraction # Term 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Term 1 of  $\\partial_t \\bar{\\Lambda}^{i}$: $\\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k$\n",
+    "\n",
+    "Computing this term requires that we define $\\bar{\\Lambda}^i$ and $\\bar{\\Lambda}^i_{,j}$ in terms of the rescaled (i.e., actual evolved) variable $\\lambda^i$ and derivatives: \n",
+    "\\begin{align}\n",
+    "\\bar{\\Lambda}^i &= \\lambda^i \\text{ReU[i]} \\\\\n",
+    "\\bar{\\Lambda}^i_{,\\ j} &= \\lambda^i_{,\\ j} \\text{ReU[i]} + \\lambda^i \\text{ReUdD[i][j]} \n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 12b: Term 1 of \\partial_t \\bar{\\Lambda}^i: \\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k\n",
+    "# First we declare \\bar{\\Lambda}^i and \\bar{\\Lambda}^i_{,j} in terms of \\lambda^i and \\lambda^i_{,j}\n",
+    "LambarU = ixp.zerorank1()\n",
+    "LambarU_dupD = ixp.zerorank2()\n",
+    "lambdaU_dupD = ixp.declarerank2(\"lambdaU_dupD\",\"none\")\n",
+    "for i in range(DIM):\n",
+    "    LambarU[i] = lambdaU[i]*rfm.ReU[i]\n",
+    "    for j in range(DIM):\n",
+    "        LambarU_dupD[i][j] = lambdaU_dupD[i][j]*rfm.ReU[i] + lambdaU[i]*rfm.ReUdD[i][j]\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for k in range(DIM):\n",
+    "        Lambar_rhsU[i] += betaU[k]*LambarU_dupD[i][k] - betaU_dD[i][k]*LambarU[k] # Term 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Term 2 of $\\partial_t \\bar{\\Lambda}^{i}$: $\\bar{\\gamma}^{j k} \\hat{D}_{j} \\hat{D}_{k} \\beta^{i}$\n",
+    "\n",
+    "This is a relatively difficult term to compute, as it requires we evaluate the second covariant derivative of the shift vector, with respect to the hatted (i.e., reference) metric.\n",
+    "\n",
+    "Based on the definition of covariant derivative, we have\n",
+    "\\begin{align}\n",
+    "\\hat{D}_{k} \\beta^{i} &= \\beta^i_{,k} + \\hat{\\Gamma}^i_{mk} \\beta^m \\\\\n",
+    "\\hat{D}_{j} \\left(\\hat{D}_{k} \\beta^{i}\\right) &= \\left(\\beta^i_{,k} + \\hat{\\Gamma}^i_{mk} \\beta^m\\right)_{,j}  \\\\\n",
+    "& \\quad + \\hat{\\Gamma}^\n",
     "\\end{align}"
    ]
   },
