Finish Lambar_rhs

--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -619,7 +619,8 @@
     "\n",
     "$$\\bar{D}_{k} \\beta^{k} = \\beta^k_{,k} + \\frac{\\beta^k \\bar{\\gamma}_{,k}}{2 \\bar{\\gamma}},$$\n",
     "\n",
-    "where $\\bar{\\gamma}$ is the determinant of the conformal metric $\\bar{\\gamma}_{ij}$, which is assumed computed outside this function and set as the gridfunction detgammabar. *Exercise to student: Prove the above relation.*"
+    "where $\\bar{\\gamma}$ is the determinant of the conformal metric $\\bar{\\gamma}_{ij}$, which is assumed computed outside this function and set as the gridfunction detgammabar. *Exercise to student: Prove the above relation.*\n",
+    "[Solution.](https://physics.stackexchange.com/questions/81453/general-relativity-christoffel-symbol-identity)"
    ]
   },
   {
@@ -970,6 +971,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 12: right-hand side of \\partial_t \\bar{\\Lambda}^i:\n",
+    "# \\partial_t \\bar{\\Lambda}^i = \\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k <- TERM 1\n",
+    "#                            + \\bar{\\gamma}^{j k} \\hat{D}_{j} \\hat{D}_{k} \\beta^{i} <- TERM 2\n",
+    "#                            + \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j} <- TERM 3\n",
+    "#                            + \\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j} <- TERM 4\n",
+    "#                            - 2 \\bar{A}^{i j} (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi) <- TERM 5\n",
+    "#                            + 2 \\bar{A}^{j k} \\Delta_{j k}^{i} <- TERM 6\n",
+    "#                            - \\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K <- TERM 7\n",
+    "\n",
     "# Step 12a: Term 1 of \\partial_t \\bar{\\Lambda}^i: \\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k\n",
     "# First we declare \\bar{\\Lambda}^i and \\bar{\\Lambda}^i_{,j} in terms of \\lambda^i and \\lambda^i_{,j}\n",
     "Lambar_rhsU = ixp.zerorank1()\n",
@@ -1026,7 +1036,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 12c: Term 2 of \\partial_t \\bar{\\Lambda}^i = \\bar{\\gamma}^{jk} (Term 2a + Term 2b + Term 2c)\n",
+    "# Step 12b: Term 2 of \\partial_t \\bar{\\Lambda}^i = \\bar{\\gamma}^{jk} (Term 2a + Term 2b + Term 2c)\n",
     "# Term 2a: \\bar{\\gamma}^{jk} \\beta^i_{,kj}\n",
     "Term2aUDD = ixp.zerorank3()\n",
     "for i in range(DIM):\n",
@@ -1054,7 +1064,7 @@
     "                    Term2cUDD[i][j][k] += ( rfm.GammahatUDD[i][d][j]*rfm.GammahatUDD[d][m][k] \\\n",
     "                                           -rfm.GammahatUDD[d][k][j]*rfm.GammahatUDD[i][m][d])*betaU[m]\n",
     "\n",
-    "# Put it all together:\n",
+    "# Put it all together to get Term 2:\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
@@ -1076,19 +1086,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 12: right-hand side of \\partial_t \\bar{\\Lambda}^i:\n",
-    "# \\partial_t \\bar{\\Lambda}^i = \\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k <- TERM 1\n",
-    "#                            + \\bar{\\gamma}^{j k} \\hat{D}_{j} \\hat{D}_{k} \\beta^{i} <- TERM 2\n",
-    "#                            + \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j} <- TERM 3\n",
-    "#                            + \\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j} <- TERM 4\n",
-    "#                            - 2 \\bar{A}^{i j} (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi) <- TERM 5\n",
-    "#                            + 2 \\bar{A}^{j k} \\Delta_{j k}^{i} <- TERM 6\n",
-    "#                            - \\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K <- TERM 7\n",
-    "\n",
-    "# Step 12a: Term 3 of \\partial_t \\bar{\\Lambda}^i\n",
+    "# Step 12c: Term 3 of \\partial_t \\bar{\\Lambda}^i:\n",
+    "#    \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j}\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        Lambar_rhsU[i] += sp.Rational(2,3)*DGammaU[i]*Dbarbetacontraction # Term 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Term 4 of  $\\partial_t \\bar{\\Lambda}^{i}$: $\\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j}$\n",
+    "\n",
+    "Recall first that\n",
+    "\n",
+    "$$\\bar{D}_{k} \\beta^{k} = \\beta^k_{,\\ k} + \\frac{\\beta^k \\bar{\\gamma}_{,k}}{2 \\bar{\\gamma}},$$\n",
+    "which is a scalar, so\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\bar{D}_m \\bar{D}_{j} \\beta^{j} &= \\left(\\beta^k_{,\\ k} + \\frac{\\beta^k \\bar{\\gamma}_{,k}}{2 \\bar{\\gamma}}\\right)_{,m} \\\\\n",
+    "&= \\beta^k_{\\ ,km} + \\frac{\\beta^k_{\\ ,m} \\bar{\\gamma}_{,k} + \\beta^k \\bar{\\gamma}_{\\ ,km}}{2 \\bar{\\gamma}} - \\frac{\\beta^k \\bar{\\gamma}_{,k} \\bar{\\gamma}_{,m}}{2 \\bar{\\gamma}^2}\n",
+    "\\end{align}\n",
+    "\n",
+    "Thus, \n",
+    "\\begin{align}\n",
+    "\\bar{D}^i \\bar{D}_{j} \\beta^{j} \n",
+    "&= \\bar{\\gamma}^{im} \\bar{D}_m \\bar{D}_{j} \\beta^{j} \\\\\n",
+    "&= \\bar{\\gamma}^{im} \\left(\\beta^k_{\\ ,km} + \\frac{\\beta^k_{\\ ,m} \\bar{\\gamma}_{,k} + \\beta^k \\bar{\\gamma}_{\\ ,km}}{2 \\bar{\\gamma}} - \\frac{\\beta^k \\bar{\\gamma}_{,k} \\bar{\\gamma}_{,m}}{2 \\bar{\\gamma}^2} \\right)\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 12d: Term 4 of \\partial_t \\bar{\\Lambda}^i:\n",
+    "#           \\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j}\n",
+    "Dbarbetacontraction_dBarD = ixp.zerorank1()\n",
+    "detgammabar_dDD = ixp.declarerank2(\"detgammabar_dDD\",\"sym12\")\n",
+    "for k in range(DIM):\n",
+    "    for m in range(DIM):\n",
+    "        Dbarbetacontraction_dBarD[m] += betaU_dDD[k][k][m] + \\\n",
+    "                                        (betaU_dD[k][m]*detgammabar_dD[k] + \n",
+    "                                         betaU[k]*detgammabar_dDD[k][m])/(2*detgammabar) \\\n",
+    "                                        -betaU[k]*detgammabar_dD[k]*detgammabar_dD[m]/(2*detgammabar*detgammabar)\n",
+    "for i in range(DIM):\n",
+    "    for m in range(DIM):\n",
+    "        Lambar_rhsU[i] += sp.Rational(1,3)*gammabarUU[i][m]*Dbarbetacontraction_dBarD[m]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Term 5 of  $\\partial_t \\bar{\\Lambda}^{i}$: $- 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi\\right)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 12e: Term 5 of \\partial_t \\bar{\\Lambda}^i:\n",
+    "#           - 2 \\bar{A}^{i j} (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        Lambar_rhsU[i] += -2*AbarUU[i][j]*(alpha_dD[j] - 6*phi_dD[j])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Term 6 of $\\partial_t \\bar{\\Lambda}^{i}$: $2 \\bar{A}^{j k} \\Delta_{j k}^{i}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 12f: Term 6 of \\partial_t \\bar{\\Lambda}^i:\n",
+    "#           2 \\bar{A}^{j k} \\Delta^{i}_{j k}\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            Lambar_rhsU[i] += 2*AbarUU[j][k]*DGammaUDD[i][j][k]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Term 7 of $\\partial_t \\bar{\\Lambda}^{i}$: $-\\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 12f: Term 6 of \\partial_t \\bar{\\Lambda}^i:\n",
+    "#           -\\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K\n",
+    "trK_dD = ixp.declarerank1(\"trK_dD\")\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        Lambar_rhsU[i] += -sp.Rational(4,3)*alpha*gammabarUU[i][j]*trK_dD[j]"
    ]
   },
   {
