--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -179,13 +179,15 @@
     "  \\partial_t \\phi {} = {} & \\left[\\beta^k \\partial_k \\phi \\right] + \\frac{1}{6} \\left (\\bar{D}_{k} \\beta^{k} - \\alpha K \\right ) \\; , \\\\\n",
     "  \\partial_{t} K {} = {} & \\left[\\beta^k \\partial_k K \\right] + \\frac{1}{3} \\alpha K^{2} + \\alpha \\bar{A}_{i j} \\bar{A}^{i j} - e^{-4 \\phi} \\left (\\bar{D}_{i} \\bar{D}^{i} \\alpha + 2 \\bar{D}^{i} \\alpha \\bar{D}_{i} \\phi \\right ) \\; , \\\\\n",
     "  \\partial_t \\bar{\\Lambda}^{i} {} = {} & \\left[\\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k \\right] + \\bar{\\gamma}^{j k} \\hat{D}_{j} \\hat{D}_{k} \\beta^{i} + \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j} + \\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j} \\nonumber \\\\\n",
-    "  & - 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi \\right ) + 2 \\bar{A}^{j k} \\Delta_{j k}^{i}  -\\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K \\\\\n",
+    "  & - 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi \\right ) + 2 \\alpha \\bar{A}^{j k} \\Delta_{j k}^{i}  -\\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K \\\\\n",
     "\\partial_t \\alpha &= \\left[\\beta^i \\partial_i \\alpha\\right] - 2 \\alpha K \\\\\n",
     "  \\partial_{t} \\beta^{i} &= \\left[\\beta^j \\partial_j \\beta^i\\right] + B^{i} \\\\\n",
     "  \\partial_{t} B^{i} &= \\left[\\beta^j \\partial_j B^i\\right] + \\frac{3}{4} \\partial_{0} \\bar{\\Lambda}^{i} - \\eta B^{i}, \\; .\n",
     "\\end{align}\n",
     "\n",
     "where the terms moved from the left-hand side are enclosed in square braces. Note that $\\partial_{0} \\bar{\\Lambda}^{i}$ in the right-hand side of the $\\partial_{t} B^{i}$ equation is computed by adding $\\beta^j \\partial_j \\bar{\\Lambda}^i$ to the right-hand side expression given for $\\partial_t \\bar{\\Lambda}^i$, so no explicit time dependence occurs in the right-hand sides of the BSSN evolution equations and the Method of Lines can be applied directly.\n",
+    "\n",
+    "Notice that the shift advection operator $\\beta^k \\partial_k \\left\\{\\bar{\\gamma}_{i j},\\bar{A}_{i j},\\phi, K, \\bar{\\Lambda}^{i}, \\alpha, \\beta^i, B^i\\right\\}$ appears on the right-hand side of *every* expression. As the shift determines how the spatial coordinates $x^i$ move on the next 3D slice of our 4D manifold, we find that representing $\\partial_k$ in these shift advection terms via an *upwinded* finite difference stencil results in far lower numerical errors. This trick is implemented below in all shift advection terms.\n",
     "\n",
     "Of course the above BSSN evolution equations cannot appear as written above in our actual code, because (as discussed in the previous section on tensor rescaling) tensorial expressions can diverge at coordinate singularities. So the equations above will need to be modified to follow the tensor rescaling prescription as described in the previous section."
    ]
@@ -972,8 +974,8 @@
     "{\\underbrace {\\textstyle \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j}}_{\\text{Term 3}}} + \n",
     "{\\underbrace {\\textstyle \\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j}}_{\\text{Term 4}}} \\nonumber \\\\\n",
     "  & \n",
-    "{\\underbrace {\\textstyle - 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi \\right )}_{\\text{Term 5}}} + \n",
-    "{\\underbrace {\\textstyle 2 \\bar{A}^{j k} \\Delta_{j k}^{i}}_{\\text{Term 6}}} \n",
+    "{\\underbrace {\\textstyle - 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6 \\alpha \\partial_{j} \\phi \\right )}_{\\text{Term 5}}} + \n",
+    "{\\underbrace {\\textstyle 2 \\alpha \\bar{A}^{j k} \\Delta_{j k}^{i}}_{\\text{Term 6}}} \n",
     "{\\underbrace {\\textstyle -\\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K}_{\\text{Term 7}}}\n",
     "\\end{align}"
    ]
@@ -1003,7 +1005,7 @@
     "#                            + \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j} <- TERM 3\n",
     "#                            + \\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j} <- TERM 4\n",
     "#                            - 2 \\bar{A}^{i j} (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi) <- TERM 5\n",
-    "#                            + 2 \\bar{A}^{j k} \\Delta_{j k}^{i} <- TERM 6\n",
+    "#                            + 2 \\alpha \\bar{A}^{j k} \\Delta_{j k}^{i} <- TERM 6\n",
     "#                            - \\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K <- TERM 7\n",
     "\n",
     "# Step 12a: Term 1 of \\partial_t \\bar{\\Lambda}^i: \\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k\n",
@@ -1167,7 +1169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Term 5 of  $\\partial_t \\bar{\\Lambda}^{i}$: $- 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi\\right)$"
+    "### Term 5 of  $\\partial_t \\bar{\\Lambda}^{i}$: $- 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6\\alpha \\partial_{j} \\phi\\right)$"
    ]
   },
   {
@@ -1177,17 +1179,17 @@
    "outputs": [],
    "source": [
     "# Step 12e: Term 5 of \\partial_t \\bar{\\Lambda}^i:\n",
-    "#           - 2 \\bar{A}^{i j} (\\partial_{j} \\alpha - 6 \\partial_{j} \\phi)\n",
+    "#           - 2 \\bar{A}^{i j} (\\partial_{j} \\alpha - 6 \\alpha \\partial_{j} \\phi)\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        Lambar_rhsU[i] += -2*AbarUU[i][j]*(alpha_dD[j] - 6*phi_dD[j])"
+    "        Lambar_rhsU[i] += -2*AbarUU[i][j]*(alpha_dD[j] - 6*alpha*phi_dD[j])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Term 6 of $\\partial_t \\bar{\\Lambda}^{i}$: $2 \\bar{A}^{j k} \\Delta_{j k}^{i}$"
+    "### Term 6 of $\\partial_t \\bar{\\Lambda}^{i}$: $2\\alpha \\bar{A}^{j k} \\Delta_{j k}^{i}$"
    ]
   },
   {
@@ -1197,11 +1199,11 @@
    "outputs": [],
    "source": [
     "# Step 12f: Term 6 of \\partial_t \\bar{\\Lambda}^i:\n",
-    "#           2 \\bar{A}^{j k} \\Delta^{i}_{j k}\n",
+    "#           2 \\alpha \\bar{A}^{j k} \\Delta^{i}_{j k}\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            Lambar_rhsU[i] += 2*AbarUU[j][k]*DGammaUDD[i][j][k]"
+    "            Lambar_rhsU[i] += 2*alpha*AbarUU[j][k]*DGammaUDD[i][j][k]"
    ]
   },
   {
@@ -1349,7 +1351,7 @@
     "    for j in range(DIM):\n",
     "        h_rhsDD[i][j] = gammabar_rhsDD[i][j] / rfm.ReDD[i][j]\n",
     "        a_rhsDD[i][j] =     Abar_rhsDD[i][j] / rfm.ReDD[i][j]\n",
-    "#print(str(Lambar_rhsU[0]).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sin[x2]\").replace(\"sin(2*x2)\",\"Sin[2*x2]\").replace(\"cos(x2)\",\"Cos[x2]\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
+    "#print(str(Lambar_rhsU[0]).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sinx2\").replace(\"sin(2*x2)\",\"Sin2x2\").replace(\"cos(x2)\",\"Cosx2\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
     "#print(str(Dbarbetacontraction).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sin[x2]\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
     "#print(betaU_dD)"
    ]
