--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -1116,9 +1116,12 @@
    "source": [
     "# Step 12c: Term 3 of \\partial_t \\bar{\\Lambda}^i:\n",
     "#    \\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j}\n",
+    "Lambar_rhsUpieceU = ixp.zerorank1()\n",
+    "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        Lambar_rhsU[i] += sp.Rational(2,3)*DGammaU[i]*Dbarbetacontraction # Term 3"
+    "        Lambar_rhsU[i] += sp.Rational(2,3)*DGammaU[i]*Dbarbetacontraction # Term 3\n",
+    "        Lambar_rhsUpieceU[i] += DGammaU[i] #sp.Rational(2,3)*DGammaU[i]*Dbarbetacontraction # Term 3"
    ]
   },
   {
@@ -1351,7 +1354,7 @@
     "    for j in range(DIM):\n",
     "        h_rhsDD[i][j] = gammabar_rhsDD[i][j] / rfm.ReDD[i][j]\n",
     "        a_rhsDD[i][j] =     Abar_rhsDD[i][j] / rfm.ReDD[i][j]\n",
-    "#print(str(Lambar_rhsU[0]).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sinx2\").replace(\"sin(2*x2)\",\"Sin2x2\").replace(\"cos(x2)\",\"Cosx2\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
+    "#print(str(Lambar_rhsUpieceU[0]).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sinx2\").replace(\"sin(2*x2)\",\"Sin2x2\").replace(\"cos(x2)\",\"Cosx2\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
     "#print(str(Dbarbetacontraction).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sin[x2]\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
     "#print(betaU_dD)"
    ]
