Conformal Ricci tensor now agrees with trusted (prev version) of NRPy+, as well as \partial_t Lambar

--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -358,16 +358,24 @@
     "                                        hDD[i][j]*rfm.ReDDdDD[i][j][k][l]\n",
     "\n",
     "# Step 5d: Define DhatgammabarDDdD[i][j][l] = \\bar{\\gamma}_{ij;\\hat{l}}\n",
+    "# \\bar{\\gamma}_{ij;\\hat{l}} = \\varepsilon_{i j,l} \n",
+    "#                           - \\hat{\\Gamma}^m_{i l} \\varepsilon_{m j} \n",
+    "#                           - \\hat{\\Gamma}^m_{j l} \\varepsilon_{i m}\n",
     "gammabarDD_dHatD = ixp.zerorank3()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for l in range(DIM):\n",
     "            gammabarDD_dHatD[i][j][l] = epsDD_dD[i][j][l]\n",
     "            for m in range(DIM):\n",
-    "                gammabarDD_dHatD[i][j][l] -= rfm.GammahatUDD[m][i][l]*epsDD[m][j] \\\n",
-    "                                          -  rfm.GammahatUDD[m][j][l]*epsDD[i][m]\n",
+    "                gammabarDD_dHatD[i][j][l] += - rfm.GammahatUDD[m][i][l]*epsDD[m][j] \\\n",
+    "                                             - rfm.GammahatUDD[m][j][l]*epsDD[i][m]\n",
     "\n",
-    "# Step 5e: Define \\bar{\\gamma}_{ij;\\hat{l},k} = DhatgammabarDD_dHatD_dD[i][j][l][k]\n",
+    "# Step 5e: Define \\bar{\\gamma}_{ij;\\hat{l},k} = DhatgammabarDD_dHatD_dD[i][j][l][k]:\n",
+    "#        \\bar{\\gamma}_{ij;\\hat{l},k} = \\varepsilon_{ij,lk} \n",
+    "#                                      - \\hat{\\Gamma}^m_{i l,k} \\varepsilon_{m j}\n",
+    "#                                      - \\hat{\\Gamma}^m_{i l} \\varepsilon_{m j,k}\n",
+    "#                                      - \\hat{\\Gamma}^m_{j l,k} \\varepsilon_{i m}\n",
+    "#                                      - \\hat{\\Gamma}^m_{j l} \\varepsilon_{i m,k}\n",
     "gammabarDD_dHatD_dD = ixp.zerorank4()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -379,7 +387,12 @@
     "                                                       -rfm.GammahatUDD[m][i][l]*epsDD_dD[m][j][k] \\\n",
     "                                                       -rfm.GammahatUDDdD[m][j][l][k]*epsDD[i][m]  \\\n",
     "                                                       -rfm.GammahatUDD[m][j][l]*epsDD_dD[i][m][k]\n",
+    "\n",
     "# Step 5f: Define \\bar{\\gamma}_{ij;\\hat{l}\\hat{k}} = DhatgammabarDD_dHatDD[i][j][l][k]\n",
+    "#          \\bar{\\gamma}_{ij;\\hat{l}\\hat{k}} = \\partial_k \\hat{D}_{l} \\varepsilon_{i j}\n",
+    "#                                           - \\hat{\\Gamma}^m_{lk} \\left(\\hat{D}_{m} \\varepsilon_{i j}\\right) \n",
+    "#                                           - \\hat{\\Gamma}^m_{ik} \\left(\\hat{D}_{l} \\varepsilon_{m j}\\right)\n",
+    "#                                           - \\hat{\\Gamma}^m_{jk} \\left(\\hat{D}_{l} \\varepsilon_{i m}\\right)\n",
     "gammabarDD_dHatDD = ixp.zerorank4()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -401,11 +414,13 @@
     "# Step 5h: Add the first term to RbarDD:\n",
     "#         - \\frac{1}{2} \\bar{\\gamma}^{k l} \\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j}\n",
     "RbarDD = ixp.zerorank2()\n",
+    "RbarDDpiece = ixp.zerorank2()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            for l in range(DIM):\n",
-    "                RbarDD[i][j] += -sp.Rational(1,2) * gammabarUU[k][l]*gammabarDD_dHatDD[i][j][l][k]"
+    "                RbarDD[i][j] += -sp.Rational(1,2) * gammabarUU[k][l]*gammabarDD_dHatDD[i][j][l][k]\n",
+    "                RbarDDpiece[i][j] += -sp.Rational(1,2) * gammabarUU[k][l]*gammabarDD_dHatDD[i][j][l][k]"
    ]
   },
   {
@@ -438,11 +453,11 @@
    "outputs": [],
    "source": [
     "# Step 6a: Second term of RhatDD: compute \\hat{D}_{j} \\bar{\\Lambda}^{k} = LambarU_dHatD[k][j]\n",
+    "lambdaU_dD = ixp.declarerank2(\"lambdaU_dD\",\"none\")\n",
     "LambarU_dHatD = ixp.zerorank2()\n",
-    "lambdaU_dD = ixp.declarerank2(\"lambdaU_dD\",\"sym12\")\n",
     "for j in range(DIM):\n",
     "    for k in range(DIM):\n",
-    "        LambarU_dHatD[k][j] = lambdaU_dD[j][k]*rfm.ReU[k] + lambdaU[k]*rfm.ReUdD[k][j]\n",
+    "        LambarU_dHatD[k][j] = lambdaU_dD[k][j]*rfm.ReU[k] + lambdaU[k]*rfm.ReUdD[k][j]\n",
     "        for m in range(DIM):\n",
     "            LambarU_dHatD[k][j] += rfm.GammahatUDD[k][m][j]*lambdaU[m]*rfm.ReU[m]"
    ]
@@ -537,7 +552,8 @@
     "            for m in range(DIM):\n",
     "                DGammaDDD[i][j][k] += gammabarDD[i][m] * DGammaUDD[m][j][k]\n",
     "\n",
-    "# Step 7e: Add third term to Ricci tensor: \\Delta^{k} \\Delta_{(i j) k} = 1/2 \\Delta^{k} (\\Delta_{i j k} + \\Delta_{j i k})\n",
+    "# Step 7e: Add third term to Ricci tensor: \n",
+    "#      \\Delta^{k} \\Delta_{(i j) k} = 1/2 \\Delta^{k} (\\Delta_{i j k} + \\Delta_{j i k})\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
@@ -1353,7 +1369,7 @@
     "    for j in range(DIM):\n",
     "        h_rhsDD[i][j] = gammabar_rhsDD[i][j] / rfm.ReDD[i][j]\n",
     "        a_rhsDD[i][j] =     Abar_rhsDD[i][j] / rfm.ReDD[i][j]\n",
-    "#print(str(Lambar_rhsU[0]).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sin[x2]\").replace(\"sin(2*x2)\",\"Sin[2*x2]\").replace(\"cos(x2)\",\"Cos[x2]\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
+    "#print(str(bet_rhsU[0]).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sin[x2]\").replace(\"sin(2*x2)\",\"Sin[2*x2]\").replace(\"cos(x2)\",\"Cos[x2]\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
     "#print(str(Dbarbetacontraction).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sin[x2]\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
     "#print(betaU_dD)"
    ]
