--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -740,8 +740,16 @@
    "source": [
     "# Step 9a: First term of \\partial_t \\bar{A}_{i j}:\n",
     "# \\beta^k \\partial_k \\bar{A}_{ij} + \\partial_i \\beta^k \\bar{A}_{kj} + \\partial_j \\beta^k \\bar{A}_{ik}\n",
+    "\n",
+    "# First define aDD_dupD:\n",
+    "AbarDD_dupD = ixp.zerorank3()\n",
+    "aDD_dupD = ixp.declarerank3(\"aDD_dupD\",\"sym12\")\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            AbarDD_dupD[i][j][k] += aDD_dupD[i][j][k]*rfm.ReDD[i][j] + aDD[i][j]*rfm.ReDDdD[i][j][k]\n",
+    "\n",
     "Abar_rhsDD = ixp.zerorank2()\n",
-    "AbarDD_dupD = ixp.declarerank3(\"AbarDD_dupD\",\"sym12\")\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
@@ -1371,7 +1379,7 @@
     "    for j in range(DIM):\n",
     "        h_rhsDD[i][j] = gammabar_rhsDD[i][j] / rfm.ReDD[i][j]\n",
     "        a_rhsDD[i][j] =     Abar_rhsDD[i][j] / rfm.ReDD[i][j]\n",
-    "#print(str(bet_rhsU[1]).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sin[x2]\").replace(\"sin(2*x2)\",\"Sin[2*x2]\").replace(\"cos(x2)\",\"Cos[x2]\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
+    "#print(str(Abar_rhsDD[2][2]).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sin[x2]\").replace(\"sin(2*x2)\",\"Sin[2*x2]\").replace(\"cos(x2)\",\"Cos[x2]\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
     "#print(str(Dbarbetacontraction).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sin[x2]\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
     "#print(betaU_dD)"
    ]
