Fix a bug when SIMD+CSE enabled, and no SIMD constants needed to be declared.

--- a/Tutorial-Indexed_Expressions.ipynb
+++ b/Tutorial-Indexed_Expressions.ipynb
@@ -317,7 +317,10 @@
    ],
    "source": [
     "par.set_parval_from_str(\"outputC::SIMD_enable\",True)\n",
-    "outputC(con,\"con\")"
+    "outputC(con,\"con\")\n",
+    "\n",
+    "# Restor SIMD_enable to be False, to make it easier to read the output in the Exercise below.\n",
+    "par.set_parval_from_str(\"outputC::SIMD_enable\",False)"
    ]
   },
   {
@@ -342,6 +345,7 @@
    "source": [
     "# *Uncomment* the below %reset command and then press <Shift>+<Enter>. \n",
     "#    Respond with \"y\" in the dialog box to reset all variables.\n",
+    "\n",
     "# %reset"
    ]
   },
