--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "## Generating C code for the right-hand-side of the scalar wave equation, in Cartesian coordinates\n",
     "\n",
+    "### NRPy+ Source Code for this module: [ScalarWave/ScalarWave.py](../edit/ScalarWave/ScalarWave.py)\n",
+    "\n",
     "### Problem Statement\n",
     "\n",
     "We wish to numerically solve the scalar wave equation in Cartesian coordinates:\n",
@@ -170,10 +172,10 @@
      "text": [
       "/*\n",
       " *  Original SymPy expressions:\n",
-      " *  \"[const REAL_SIMD_ARRAY uu_dDD00 = invdx0**2*(-5269*uu/1800 + 5*uu_i0m1_i1_i2_i3/3 - 5*uu_i0m2_i1_i2_i3/21 + 5*uu_i0m3_i1_i2_i3/126 - 5*uu_i0m4_i1_i2_i3/1008 + uu_i0m5_i1_i2_i3/3150 + 5*uu_i0p1_i1_i2_i3/3 - 5*uu_i0p2_i1_i2_i3/21 + 5*uu_i0p3_i1_i2_i3/126 - 5*uu_i0p4_i1_i2_i3/1008 + uu_i0p5_i1_i2_i3/3150),\n",
-      " *    const REAL_SIMD_ARRAY uu_dDD11 = invdx1**2*(-5269*uu/1800 + 5*uu_i0_i1m1_i2_i3/3 - 5*uu_i0_i1m2_i2_i3/21 + 5*uu_i0_i1m3_i2_i3/126 - 5*uu_i0_i1m4_i2_i3/1008 + uu_i0_i1m5_i2_i3/3150 + 5*uu_i0_i1p1_i2_i3/3 - 5*uu_i0_i1p2_i2_i3/21 + 5*uu_i0_i1p3_i2_i3/126 - 5*uu_i0_i1p4_i2_i3/1008 + uu_i0_i1p5_i2_i3/3150),\n",
+      " *  \"[const REAL_SIMD_ARRAY uu_dDD33 = invdx3**2*(-5269*uu/1800 + 5*uu_i0_i1_i2_i3m1/3 - 5*uu_i0_i1_i2_i3m2/21 + 5*uu_i0_i1_i2_i3m3/126 - 5*uu_i0_i1_i2_i3m4/1008 + uu_i0_i1_i2_i3m5/3150 + 5*uu_i0_i1_i2_i3p1/3 - 5*uu_i0_i1_i2_i3p2/21 + 5*uu_i0_i1_i2_i3p3/126 - 5*uu_i0_i1_i2_i3p4/1008 + uu_i0_i1_i2_i3p5/3150),\n",
       " *    const REAL_SIMD_ARRAY uu_dDD22 = invdx2**2*(-5269*uu/1800 + 5*uu_i0_i1_i2m1_i3/3 - 5*uu_i0_i1_i2m2_i3/21 + 5*uu_i0_i1_i2m3_i3/126 - 5*uu_i0_i1_i2m4_i3/1008 + uu_i0_i1_i2m5_i3/3150 + 5*uu_i0_i1_i2p1_i3/3 - 5*uu_i0_i1_i2p2_i3/21 + 5*uu_i0_i1_i2p3_i3/126 - 5*uu_i0_i1_i2p4_i3/1008 + uu_i0_i1_i2p5_i3/3150),\n",
-      " *    const REAL_SIMD_ARRAY uu_dDD33 = invdx3**2*(-5269*uu/1800 + 5*uu_i0_i1_i2_i3m1/3 - 5*uu_i0_i1_i2_i3m2/21 + 5*uu_i0_i1_i2_i3m3/126 - 5*uu_i0_i1_i2_i3m4/1008 + uu_i0_i1_i2_i3m5/3150 + 5*uu_i0_i1_i2_i3p1/3 - 5*uu_i0_i1_i2_i3p2/21 + 5*uu_i0_i1_i2_i3p3/126 - 5*uu_i0_i1_i2_i3p4/1008 + uu_i0_i1_i2_i3p5/3150),\n",
+      " *    const REAL_SIMD_ARRAY uu_dDD00 = invdx0**2*(-5269*uu/1800 + 5*uu_i0m1_i1_i2_i3/3 - 5*uu_i0m2_i1_i2_i3/21 + 5*uu_i0m3_i1_i2_i3/126 - 5*uu_i0m4_i1_i2_i3/1008 + uu_i0m5_i1_i2_i3/3150 + 5*uu_i0p1_i1_i2_i3/3 - 5*uu_i0p2_i1_i2_i3/21 + 5*uu_i0p3_i1_i2_i3/126 - 5*uu_i0p4_i1_i2_i3/1008 + uu_i0p5_i1_i2_i3/3150),\n",
+      " *    const REAL_SIMD_ARRAY uu_dDD11 = invdx1**2*(-5269*uu/1800 + 5*uu_i0_i1m1_i2_i3/3 - 5*uu_i0_i1m2_i2_i3/21 + 5*uu_i0_i1m3_i2_i3/126 - 5*uu_i0_i1m4_i2_i3/1008 + uu_i0_i1m5_i2_i3/3150 + 5*uu_i0_i1p1_i2_i3/3 - 5*uu_i0_i1p2_i2_i3/21 + 5*uu_i0_i1p3_i2_i3/126 - 5*uu_i0_i1p4_i2_i3/1008 + uu_i0_i1p5_i2_i3/3150),\n",
       " *    const REAL_SIMD_ARRAY __RHS_exp_0 = vv,\n",
       " *    const REAL_SIMD_ARRAY __RHS_exp_1 = wavespeed**2*(uu_dDD00 + uu_dDD11 + uu_dDD22 + uu_dDD33)]\"\n",
       " */\n",
@@ -234,10 +236,10 @@
       "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_m5_21);\n",
       "\n",
       "   const REAL_SIMD_ARRAY tmp0 = MulSIMD(uu, _Rational_m5269_1800);\n",
+      "   const REAL_SIMD_ARRAY uu_dDD33 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2_i3p4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2_i3p3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2_i3p2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2_i3p1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2_i3m5, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1_i2_i3m4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2_i3m3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2_i3m2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2_i3m1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2_i3p5, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx3, invdx3));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD22 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2p4_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2p3_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2p2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2p1_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2m5_i3, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1_i2m4_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2m3_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2m2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2m1_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2p5_i3, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx2, invdx2));\n",
       "   const REAL_SIMD_ARRAY uu_dDD00 = MulSIMD(FusedMulAddSIMD(uu_i0p4_i1_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0p3_i1_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0p2_i1_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0p1_i1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0m5_i1_i2_i3, _Rational_1_3150, FusedMulAddSIMD(uu_i0m4_i1_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0m3_i1_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0m2_i1_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0m1_i1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0p5_i1_i2_i3, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx0, invdx0));\n",
       "   const REAL_SIMD_ARRAY uu_dDD11 = MulSIMD(FusedMulAddSIMD(uu_i0_i1p4_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1p3_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1p2_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1p1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1m5_i2_i3, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1m4_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1m3_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1m2_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1m1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1p5_i2_i3, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx1, invdx1));\n",
-      "   const REAL_SIMD_ARRAY uu_dDD22 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2p4_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2p3_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2p2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2p1_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2m5_i3, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1_i2m4_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2m3_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2m2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2m1_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2p5_i3, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx2, invdx2));\n",
-      "   const REAL_SIMD_ARRAY uu_dDD33 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2_i3p4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2_i3p3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2_i3p2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2_i3p1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2_i3m5, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1_i2_i3m4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2_i3m3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2_i3m2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2_i3m1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2_i3p5, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx3, invdx3));\n",
       "   const REAL_SIMD_ARRAY __RHS_exp_0 = vv;\n",
       "   const REAL_SIMD_ARRAY __RHS_exp_1 = MulSIMD(AddSIMD(uu_dDD22, AddSIMD(uu_dDD11, AddSIMD(uu_dDD00, uu_dDD33))), MulSIMD(wavespeed, wavespeed));\n",
       "   WriteSIMD(&rhs_gfs[IDX5(UUGF, i0, i1, i2, i3)], __RHS_exp_0);\n",
