--- a/Tutorial-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-ScalarWaveCurvilinear.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Generating C code for the right-hand-side of the scalar wave equation, in ***curvilinear*** coordinates, using a reference metric formalism\n",
     "\n",
-    "### NRPy+ Source Code for this module: [scalarwave_RHSs.py](../edit/scalarwave_RHSs.py)\n",
+    "### NRPy+ Source Code for this module: [ScalarWaveCurvilinear/ScalarWaveCurvilinear.py](../edit/ScalarWaveCurvilinear/ScalarWaveCurvilinear.py)\n",
     "\n",
     "Recall from [NRPy+ tutorial module on the Cartesian scalar wave equation](Tutorial-ScalarWave.ipynb), the scalar wave equation in 3D Cartesian coordinates is given by\n",
     "\n",
@@ -242,11 +242,11 @@
       "wavespeed**2*(2*uu_dD0*xx0 + uu_dD1/tan(xx1) + uu_dDD00*xx0**2 + uu_dDD11 + uu_dDD22/sin(xx1)**2)/xx0**2\n",
       "/*\n",
       " *  Original SymPy expressions:\n",
-      " *  \"[const double uu_dDD00 = invdx0**2*(-5*uu/2 + 4*uu_i0m1_i1_i2/3 - uu_i0m2_i1_i2/12 + 4*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
-      " *    const double uu_dD1 = invdx1*(-2*uu_i0_i1m1_i2/3 + uu_i0_i1m2_i2/12 + 2*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
+      " *  \"[const double uu_dD1 = invdx1*(-2*uu_i0_i1m1_i2/3 + uu_i0_i1m2_i2/12 + 2*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
+      " *    const double uu_dDD00 = invdx0**2*(-5*uu/2 + 4*uu_i0m1_i1_i2/3 - uu_i0m2_i1_i2/12 + 4*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
       " *    const double uu_dD0 = invdx0*(-2*uu_i0m1_i1_i2/3 + uu_i0m2_i1_i2/12 + 2*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
-      " *    const double uu_dDD11 = invdx1**2*(-5*uu/2 + 4*uu_i0_i1m1_i2/3 - uu_i0_i1m2_i2/12 + 4*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
       " *    const double uu_dDD22 = invdx2**2*(-5*uu/2 + 4*uu_i0_i1_i2m1/3 - uu_i0_i1_i2m2/12 + 4*uu_i0_i1_i2p1/3 - uu_i0_i1_i2p2/12),\n",
+      " *    const double uu_dDD11 = invdx1**2*(-5*uu/2 + 4*uu_i0_i1m1_i2/3 - uu_i0_i1m2_i2/12 + 4*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
       " *    rhs_gfs[IDX4(UUGF, i0, i1, i2)] = vv,\n",
       " *    rhs_gfs[IDX4(VVGF, i0, i1, i2)] = wavespeed**2*(2*uu_dD0*xx0 + uu_dD1/tan(xx1) + uu_dDD00*xx0**2 + uu_dDD11 + uu_dDD22/sin(xx1)**2)/xx0**2]\"\n",
       " */\n",
@@ -265,17 +265,17 @@
       "   const double uu_i0_i1_i2p1 = in_gfs[IDX4(UUGF, i0,i1,i2+1)];\n",
       "   const double uu_i0_i1_i2p2 = in_gfs[IDX4(UUGF, i0,i1,i2+2)];\n",
       "   const double vv = in_gfs[IDX4(VVGF, i0,i1,i2)];\n",
-      "   const double tmp0 = -(5.0 / 2.0)*uu;\n",
-      "   const double tmp1 = ((1.0 / 12.0))*uu_i0m2_i1_i2;\n",
-      "   const double tmp2 = -(1.0 / 12.0)*uu_i0p2_i1_i2;\n",
-      "   const double tmp3 = ((1.0 / 12.0))*uu_i0_i1m2_i2;\n",
-      "   const double tmp4 = -(1.0 / 12.0)*uu_i0_i1p2_i2;\n",
+      "   const double tmp0 = ((1.0 / 12.0))*uu_i0_i1m2_i2;\n",
+      "   const double tmp1 = -(1.0 / 12.0)*uu_i0_i1p2_i2;\n",
+      "   const double tmp2 = -(5.0 / 2.0)*uu;\n",
+      "   const double tmp3 = ((1.0 / 12.0))*uu_i0m2_i1_i2;\n",
+      "   const double tmp4 = -(1.0 / 12.0)*uu_i0p2_i1_i2;\n",
       "   const double tmp5 = pow(xx0, 2);\n",
-      "   const double uu_dDD00 = pow(invdx0, 2)*(tmp0 - tmp1 + tmp2 + ((4.0 / 3.0))*uu_i0m1_i1_i2 + ((4.0 / 3.0))*uu_i0p1_i1_i2);\n",
-      "   const double uu_dD1 = invdx1*(tmp3 + tmp4 - (2.0 / 3.0)*uu_i0_i1m1_i2 + ((2.0 / 3.0))*uu_i0_i1p1_i2);\n",
-      "   const double uu_dD0 = invdx0*(tmp1 + tmp2 - (2.0 / 3.0)*uu_i0m1_i1_i2 + ((2.0 / 3.0))*uu_i0p1_i1_i2);\n",
-      "   const double uu_dDD11 = pow(invdx1, 2)*(tmp0 - tmp3 + tmp4 + ((4.0 / 3.0))*uu_i0_i1m1_i2 + ((4.0 / 3.0))*uu_i0_i1p1_i2);\n",
-      "   const double uu_dDD22 = pow(invdx2, 2)*(tmp0 + ((4.0 / 3.0))*uu_i0_i1_i2m1 - (1.0 / 12.0)*uu_i0_i1_i2m2 + ((4.0 / 3.0))*uu_i0_i1_i2p1 - (1.0 / 12.0)*uu_i0_i1_i2p2);\n",
+      "   const double uu_dD1 = invdx1*(tmp0 + tmp1 - (2.0 / 3.0)*uu_i0_i1m1_i2 + ((2.0 / 3.0))*uu_i0_i1p1_i2);\n",
+      "   const double uu_dDD00 = pow(invdx0, 2)*(tmp2 - tmp3 + tmp4 + ((4.0 / 3.0))*uu_i0m1_i1_i2 + ((4.0 / 3.0))*uu_i0p1_i1_i2);\n",
+      "   const double uu_dD0 = invdx0*(tmp3 + tmp4 - (2.0 / 3.0)*uu_i0m1_i1_i2 + ((2.0 / 3.0))*uu_i0p1_i1_i2);\n",
+      "   const double uu_dDD22 = pow(invdx2, 2)*(tmp2 + ((4.0 / 3.0))*uu_i0_i1_i2m1 - (1.0 / 12.0)*uu_i0_i1_i2m2 + ((4.0 / 3.0))*uu_i0_i1_i2p1 - (1.0 / 12.0)*uu_i0_i1_i2p2);\n",
+      "   const double uu_dDD11 = pow(invdx1, 2)*(-tmp0 + tmp1 + tmp2 + ((4.0 / 3.0))*uu_i0_i1m1_i2 + ((4.0 / 3.0))*uu_i0_i1p1_i2);\n",
       "   rhs_gfs[IDX4(UUGF, i0, i1, i2)] = vv;\n",
       "   rhs_gfs[IDX4(VVGF, i0, i1, i2)] = pow(wavespeed, 2)*(tmp5*uu_dDD00 + 2*uu_dD0*xx0 + uu_dD1/tan(xx1) + uu_dDD11 + uu_dDD22/pow(sin(xx1), 2))/tmp5;\n",
       "}\n"
