--- a/Tutorial-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-ScalarWaveCurvilinear.ipynb
@@ -56,7 +56,17 @@
     "$$\\hat{\\Gamma}^\\tau = \\hat{g}^{\\mu\\nu} \\hat{\\Gamma}^\\tau_{\\mu\\nu}.$$\n",
     "\n",
     "Then the scalar wave equation is given by\n",
-    "$$0 = \\hat{g}^{\\mu \\nu} \\partial_{\\mu} \\partial_{\\nu} u - \\hat{\\Gamma}^\\tau \\partial_\\tau u.$$"
+    "$$0 = \\hat{g}^{\\mu \\nu} \\partial_{\\mu} \\partial_{\\nu} u - \\hat{\\Gamma}^\\tau \\partial_\\tau u.$$\n",
+    "\n",
+    "The reference metrics we adopt satisfy\n",
+    "$$\\hat{g}^{t \\nu} = -\\delta^{t \\nu},$$\n",
+    "where $\\delta^{t \\nu}$ is the [Kronecker delta](https://en.wikipedia.org/wiki/Kronecker_delta). Therefore the scalar wave equation in curvilinear coordinates can be written\n",
+    "\\begin{align}\n",
+    "0 &= \\hat{g}^{\\mu \\nu} \\partial_{\\mu} \\partial_{\\nu} u - \\hat{\\Gamma}^\\tau \\partial_\\tau u \\\\\n",
+    "&= -\\partial_t^2 u + \\hat{g}^{i j} \\partial_{i} \\partial_{j} u - \\hat{\\Gamma}^i \\partial_i u \\\\\n",
+    "\\implies \\partial_t^2 u &= \\hat{g}^{i j} \\partial_{i} \\partial_{j} u - \\hat{\\Gamma}^i \\partial_i u,\n",
+    "\\end{align}\n",
+    "where repeated Latin indices denote implied summation over *spatial* components only. This module implements the bottom equation for arbitrary reference metrics satisfying $\\hat{g}^{t \\nu} = -\\delta^{t \\nu}$. To gain an appreciation for what NRPy+ accomplishes automatically, let's first work out the scalar wave equation in spherical coordinates by hand:"
    ]
   },
   {
@@ -242,11 +252,11 @@
       "wavespeed**2*(2*uu_dD0*xx0 + uu_dD1/tan(xx1) + uu_dDD00*xx0**2 + uu_dDD11 + uu_dDD22/sin(xx1)**2)/xx0**2\n",
       "/*\n",
       " *  Original SymPy expressions:\n",
-      " *  \"[const double uu_dD1 = invdx1*(-2*uu_i0_i1m1_i2/3 + uu_i0_i1m2_i2/12 + 2*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
-      " *    const double uu_dDD00 = invdx0**2*(-5*uu/2 + 4*uu_i0m1_i1_i2/3 - uu_i0m2_i1_i2/12 + 4*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
-      " *    const double uu_dD0 = invdx0*(-2*uu_i0m1_i1_i2/3 + uu_i0m2_i1_i2/12 + 2*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
-      " *    const double uu_dDD22 = invdx2**2*(-5*uu/2 + 4*uu_i0_i1_i2m1/3 - uu_i0_i1_i2m2/12 + 4*uu_i0_i1_i2p1/3 - uu_i0_i1_i2p2/12),\n",
+      " *  \"[const double uu_dDD22 = invdx2**2*(-5*uu/2 + 4*uu_i0_i1_i2m1/3 - uu_i0_i1_i2m2/12 + 4*uu_i0_i1_i2p1/3 - uu_i0_i1_i2p2/12),\n",
       " *    const double uu_dDD11 = invdx1**2*(-5*uu/2 + 4*uu_i0_i1m1_i2/3 - uu_i0_i1m2_i2/12 + 4*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
+      " *    const double uu_dDD00 = invdx0**2*(-5*uu/2 + 4*uu_i0m1_i1_i2/3 - uu_i0m2_i1_i2/12 + 4*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
+      " *    const double uu_dD1 = invdx1*(-2*uu_i0_i1m1_i2/3 + uu_i0_i1m2_i2/12 + 2*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
+      " *    const double uu_dD0 = invdx0*(-2*uu_i0m1_i1_i2/3 + uu_i0m2_i1_i2/12 + 2*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
       " *    rhs_gfs[IDX4(UUGF, i0, i1, i2)] = vv,\n",
       " *    rhs_gfs[IDX4(VVGF, i0, i1, i2)] = wavespeed**2*(2*uu_dD0*xx0 + uu_dD1/tan(xx1) + uu_dDD00*xx0**2 + uu_dDD11 + uu_dDD22/sin(xx1)**2)/xx0**2]\"\n",
       " */\n",
@@ -265,17 +275,17 @@
       "   const double uu_i0_i1_i2p1 = in_gfs[IDX4(UUGF, i0,i1,i2+1)];\n",
       "   const double uu_i0_i1_i2p2 = in_gfs[IDX4(UUGF, i0,i1,i2+2)];\n",
       "   const double vv = in_gfs[IDX4(VVGF, i0,i1,i2)];\n",
-      "   const double tmp0 = ((1.0 / 12.0))*uu_i0_i1m2_i2;\n",
-      "   const double tmp1 = -(1.0 / 12.0)*uu_i0_i1p2_i2;\n",
-      "   const double tmp2 = -(5.0 / 2.0)*uu;\n",
+      "   const double tmp0 = -(5.0 / 2.0)*uu;\n",
+      "   const double tmp1 = ((1.0 / 12.0))*uu_i0_i1m2_i2;\n",
+      "   const double tmp2 = -(1.0 / 12.0)*uu_i0_i1p2_i2;\n",
       "   const double tmp3 = ((1.0 / 12.0))*uu_i0m2_i1_i2;\n",
       "   const double tmp4 = -(1.0 / 12.0)*uu_i0p2_i1_i2;\n",
       "   const double tmp5 = pow(xx0, 2);\n",
-      "   const double uu_dD1 = invdx1*(tmp0 + tmp1 - (2.0 / 3.0)*uu_i0_i1m1_i2 + ((2.0 / 3.0))*uu_i0_i1p1_i2);\n",
-      "   const double uu_dDD00 = pow(invdx0, 2)*(tmp2 - tmp3 + tmp4 + ((4.0 / 3.0))*uu_i0m1_i1_i2 + ((4.0 / 3.0))*uu_i0p1_i1_i2);\n",
+      "   const double uu_dDD22 = pow(invdx2, 2)*(tmp0 + ((4.0 / 3.0))*uu_i0_i1_i2m1 - (1.0 / 12.0)*uu_i0_i1_i2m2 + ((4.0 / 3.0))*uu_i0_i1_i2p1 - (1.0 / 12.0)*uu_i0_i1_i2p2);\n",
+      "   const double uu_dDD11 = pow(invdx1, 2)*(tmp0 - tmp1 + tmp2 + ((4.0 / 3.0))*uu_i0_i1m1_i2 + ((4.0 / 3.0))*uu_i0_i1p1_i2);\n",
+      "   const double uu_dDD00 = pow(invdx0, 2)*(tmp0 - tmp3 + tmp4 + ((4.0 / 3.0))*uu_i0m1_i1_i2 + ((4.0 / 3.0))*uu_i0p1_i1_i2);\n",
+      "   const double uu_dD1 = invdx1*(tmp1 + tmp2 - (2.0 / 3.0)*uu_i0_i1m1_i2 + ((2.0 / 3.0))*uu_i0_i1p1_i2);\n",
       "   const double uu_dD0 = invdx0*(tmp3 + tmp4 - (2.0 / 3.0)*uu_i0m1_i1_i2 + ((2.0 / 3.0))*uu_i0p1_i1_i2);\n",
-      "   const double uu_dDD22 = pow(invdx2, 2)*(tmp2 + ((4.0 / 3.0))*uu_i0_i1_i2m1 - (1.0 / 12.0)*uu_i0_i1_i2m2 + ((4.0 / 3.0))*uu_i0_i1_i2p1 - (1.0 / 12.0)*uu_i0_i1_i2p2);\n",
-      "   const double uu_dDD11 = pow(invdx1, 2)*(-tmp0 + tmp1 + tmp2 + ((4.0 / 3.0))*uu_i0_i1m1_i2 + ((4.0 / 3.0))*uu_i0_i1p1_i2);\n",
       "   rhs_gfs[IDX4(UUGF, i0, i1, i2)] = vv;\n",
       "   rhs_gfs[IDX4(VVGF, i0, i1, i2)] = pow(wavespeed, 2)*(tmp5*uu_dDD00 + 2*uu_dD0*xx0 + uu_dD1/tan(xx1) + uu_dDD11 + uu_dDD22/pow(sin(xx1), 2))/tmp5;\n",
       "}\n"
