ScalarWave tut: Reorganize to make clearer.

--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -44,7 +44,7 @@
     "$$u^n_i = u(t_n,x_i) = u(t_0 + n \\Delta t, x_0 + i \\Delta x),$$\n",
     "where $\\Delta t$ and $\\Delta x$ represent the temporal and spatial resolution, respectively. $v^n_i$ is sampled at the same points in space and time.\n",
     "\n",
-    "### Spatial Derivatives: the $\\nabla^2$ Operator\n",
+    "### Scalar Wave RHSs in One Spatial Dimension, Fourth-Order Finite Differencing\n",
     "\n",
     "To minimize complication, we will first restrict ourselves to solving the wave equation in one spatial dimension, so\n",
     "$$\\nabla^2 u = \\partial_x^2 u.$$\n",
@@ -161,7 +161,9 @@
     "\\end{equation}\n",
     "correctly (easier to read in the \"Original SymPy expressions\" comment block at the top of the C output. Note that $\\texttt{invdx0}=1/\\Delta x_0$, where $\\Delta x_0$ is the (uniform) grid spacing in the zeroth, or $x_0$ direction.\n",
     "\n",
-    "Now let's repeat the process, except at **10th** finite difference order, for the **3-spatial-dimension** scalar wave equation, with SIMD enabled:"
+    "### Scalar Wave RHSs in Three Spatial Dimensions, Tenth-Order Finite Differencing\n",
+    "\n",
+    "Let's next repeat the same process, only this time at **10th** finite difference order, for the **3-spatial-dimension** scalar wave equation, with SIMD enabled:"
    ]
   },
   {
@@ -298,7 +300,7 @@
    "source": [
     "### NRPy+ Module Code Validation\n",
     "\n",
-    "Here, as a code validation check, we verify agreement in the SymPy expressions for the RHSs of the Scalar Wave equation (i.e., uu_rhs and vv_rhs) between\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the RHSs of the three-spatial-dimension Scalar Wave equation (i.e., uu_rhs and vv_rhs) between\n",
     "1. this tutorial and \n",
     "2. the NRPy+ ScalarWave/ScalarWave_RHSs.py module."
    ]
@@ -357,9 +359,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initial Data for the Scalar Wave Equation\n",
+    "## Plane-Wave Initial Data for the Scalar Wave Equation\n",
     "\n",
-    "The plane-wave solution to the scalar wave equation for a wave traveling in the $\\hat{k}$ direction is\n",
+    "The solution to the scalar wave equation for a monochromatic (single-wavelength) wave traveling in the $\\hat{k}$ direction is\n",
     "$$u(\\vec{x},t) = f(\\hat{k}\\cdot\\vec{x} - c t),$$\n",
     "where $\\hat{k}$ is a unit vector."
    ]
